# lightrag-mcp

./: .env.example  .gitignore  .windsurfrules  Dockerfile  README.md  docker-compose.yml  lightrag-mcp-implementation.md  pyproject.toml  smithery.yaml  tasks.md
.github/workflows/: publish.yml
docker/postgres/: Dockerfile  init.sql
src/lightrag_mcp/: config.py  lightrag_client.py  main.py  process_manager.py  server.py
src/lightrag_mcp/client/: README.md  pyproject.toml  setup.py
src/lightrag_mcp/client/light_rag_server_api_client/: openapi.json
src/lightrag_mcp/client/light_rag_server_api_client/api/graph/: __init__.py
src/lightrag_mcp/client/light_rag_server_api_client/models/: __init__.py  pipeline_status_response.py  query_request.py
tests/: __init__.py
